manifests/sample-app/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: composer-ai-apps-demo
  labels:
    app.kubernetes.io/part-of: austin-rhug-2026-demo
